r9803: Remove items done from TODO files.

--- a/README
+++ b/README
@@ -12,7 +12,7 @@ UncommonSQL developed at onShore Development Inc.
 
 CLSQL's home is http://clsql.b9.com.
 
-Documentation is availabe as a PDF file in doc/clsql.pdf and as HTML
+Documentation is available as a PDF file in doc/clsql.pdf and as HTML
 files in doc/html.tar.gz.
 
 
