--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cl-sql (3.0.0-1) unstable; urgency=low
+
+  * New upstream
+
+ -- Kevin M. Rosenberg <kmr@debian.org>  Mon,  2 Aug 2004 19:32:39 -0600
+
 cl-sql (2.11.16-1) unstable; urgency=low
 
   * New upstream
