--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cl-sql (3.0.0-2) unstable; urgency=low
+
+  * Change assignment in rules file 
+
+ -- Kevin M. Rosenberg <kmr@debian.org>  Fri,  6 Aug 2004 10:09:04 -0600
+
 cl-sql (3.0.0-1) unstable; urgency=low
 
   * New upstream
