--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,10 @@
 02 Sep 2004 Kevin Rosenberg <kevin@rosenberg.net>
+	* Version 3.0.2 Release
 	* TODO: Add note about ODBC on Windows
 	* db-odbc/odbc-loader.lisp: Add /winnt/system32/ to
 	search directories
+	* db-odbc/odbc-ff-interface.lisp: Change the return type 
+	of SQLSetEnvAttr to :short
 	
 02 Sep 2004 Marcus Pearce <m.t.pearce@city.ac.uk> 
 	* examples/clsql-tutorial.lisp: added missing initarg for the COMPANYID
