--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,15 @@
+cl-sql (3.0.4-2) unstable; urgency=low
+
+  * New upstream
+
+ -- Kevin M. Rosenberg <kmr@debian.org>  Thu,  9 Sep 2004 22:26:28 -0600
+
+cl-sql (3.0.4-1) unstable; urgency=low
+
+  * New upstream
+
+ -- Kevin M. Rosenberg <kmr@debian.org>  Thu,  9 Sep 2004 22:21:42 -0600
+
 cl-sql (3.0.3-1) unstable; urgency=low
 
   * New upstream
