--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 10 Sep 2004 Kevin Rosenberg <kevin@rosenberg.net>
 	* doc/Makefile, doc/catalog-darwin.xml: Apply
 	patch from Cyrus Harmon for building docs on Mac OS X
+	* sql/package.lisp: Add new (pre-release) clisp MOP package 	
 	
 09 Sep 2004 Kevin Rosenberg <kevin@rosenberg.net>
 	* Version 3.0.4 Release
