r10015: 21 Sep 2004 Kevin Rosenberg <kevin@rosenberg.net>         * doc/appendix.xml: Add note about loading Oracle8 version         * db-oracle/oracle-loader.lisp: Support Oracle8 based on         data from David Young.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+21 Sep 2004 Kevin Rosenberg <kevin@rosenberg.net>
+	* doc/appendix.xml: Add note about loading Oracle8 version
+	* db-oracle/oracle-loader.lisp: Support Oracle8 based on
+	data from David Young.
+
 10 Sep 2004 Kevin Rosenberg <kevin@rosenberg.net>
 	* doc/Makefile, doc/catalog-darwin.xml: Apply
 	patch from Cyrus Harmon for building docs on Mac OS X
