--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+28 Sep 2004 Kevin Rosenberg <kevin@rosenberg.net>
+	* sql/metaclass.lisp: Support CLISP's attribute name
+	for the type field in direct class slots
+	
 27 Sep 2004 Kevin Rosenberg <kevin@rosenberg.net>
 	* Version 3.0.6 released
 	* BUGS: New file. Document suspected SIGPIPE
