--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cl-sql (3.0.7-1) unstable; urgency=low
+
+  * New upstream
+
+ -- Kevin M. Rosenberg <kmr@debian.org>  Fri,  1 Oct 2004 08:38:52 -0600
+
 cl-sql (3.0.6-1) unstable; urgency=low
 
   * New upstream
