--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+04 Oct 2004 Kevin Rosenberg <kevin@rosenberg.net>
+	* db-mysql/mysql-sql.lisp, db-db2/db2-sql.lisp: Add
+	missing quotes for types in code that is still in development
+	(thanks to Joerg Hoehle)
+	
 03 Oct 2004 Kevin Rosenberg <kevin@rosenberg.net>
 	* Version 3.0.8 released
 	* db-sqlite/sqlite-*.lisp: Apply patch from
