--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+07 Oct 2004 Kevin Rosenberg <kevin@rosenberg.net>
+	* uffi/clsql-uffi.lisp: Add support for :blob result-type
+	* db-mysql/mysql-sql.lisp: Add support for :blob
+	result-type
+	
 04 Oct 2004 Kevin Rosenberg <kevin@rosenberg.net>
 	* db-mysql/mysql-sql.lisp, db-db2/db2-sql.lisp: Add
 	missing quotes for types in code that is still in development
