--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,7 @@
 07 Oct 2004 Kevin Rosenberg <kevin@rosenberg.net>
+	* db-mysql/mysql.c: Fix parameters in bind_param call
+
+07 Oct 2004 Kevin Rosenberg <kevin@rosenberg.net>
 	* uffi/clsql-uffi.lisp: Add support for :blob result-type
 	* db-mysql/mysql-sql.lisp: Add support for :blob
 	result-type
