--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+20 Oct 2004 Kevin Rosenberg <kevin@rosenberg.net>
+	* uffi/uffi.c, uffi/clsql-uffi.lisp: Commit patch from
+	Aurelio Bignoli to fix negative 64-bit integers
+	
 07 Oct 2004 Kevin Rosenberg <kevin@rosenberg.net>
 	* db-mysql/mysql.c: Fix parameters in bind_param call
 
