--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cl-sql (3.0.9-1) unstable; urgency=low
+
+  * New upstream
+
+ -- Kevin M. Rosenberg <kmr@debian.org>  Wed, 20 Oct 2004 20:45:40 -0600
+
 cl-sql (3.0.8-1) unstable; urgency=low
 
   * New upstream
