--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cl-sql (3.0.10-1) unstable; urgency=low
+
+  * New upstream
+
+ -- Kevin M. Rosenberg <kmr@debian.org>  Sat, 23 Oct 2004 09:16:03 -0600
+
 cl-sql (3.0.9-1) unstable; urgency=low
 
   * New upstream
