--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cl-sql (3.1.0-1) unstable; urgency=low
+
+  * New upstream
+
+ -- Kevin M. Rosenberg <kmr@debian.org>  Tue,  9 Nov 2004 11:04:04 -0700
+
 cl-sql (3.0.11-1) unstable; urgency=low
 
   * New usptream
