r10156:         * Version 3.1.1         * sql/generic-postgresql.lisp: Commit patch from Chris Capel to         ignore columns which have been dropped.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+cl-sql (3.1.1-1) unstable; urgency=low
+
+  * New upstream
+  * Rebuild against mysqlclient (closes:280253)
+
+ -- Kevin M. Rosenberg <kmr@debian.org>  Fri, 12 Nov 2004 08:09:38 -0700
+
 cl-sql (3.1.0-1) unstable; urgency=low
 
   * New upstream
