--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,9 @@
 11 Nov 2004 Kevin Rosenberg <kevin@rosenberg.net>
+	* Version 3.1.1
+	* sql/generic-postgresql.lisp: Commit patch from Chris Capel to
+	ignore columns which have been dropped.
 	* clsql-postgresql-socket.asd, db-postgresql-socket/postgresql-socket-package.lisp:
-	Use sb-md5 package on SBCL, recommended by Chris capel
+	Use sb-md5 package on SBCL, recommended by Chris Capel
 	
 09 Nov 2004 Kevin Rosenberg <kevin@rosenberg.net>
 	* Version 3.1.0 released: New SQLite3 backend by Aurelio Bignoli
