--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cl-sql (3.1.2-1) unstable; urgency=low
+
+  * New upstream
+
+ -- Kevin M. Rosenberg <kmr@debian.org>  Mon,  6 Dec 2004 23:09:57 -0700
+
 cl-sql (3.1.1-1) unstable; urgency=low
 
   * New upstream
