--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+26 Dec 2004 Kevin Rosenberg <kevin@rosenberg.net>
+        * doc/ref-fdml.lisp: Fix variable tag name to varname
+	[noted by Eduardo Munoz]
+	
 06 Dec 2004 Kevin Rosenberg <kevin@rosenberg.net>
 	* Version 3.1.2
 	* sql/ooddl.lisp: Accept patch from Klaus Harbo for
