--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,8 @@
 28 Dec 2004 Kevin Rosenberg <kevin@rosenberg.net>
 	* db-mysql/mysql-sql.lisp: Apply patch from Yannick Gingras to
-	implement database-sequence-last.
+	implement database-sequence-last. Add support for detecting
+	unsigned integers.
+	* uffi/clsql-uffi.lisp: Add support for unsigned integers
 	
 26 Dec 2004 Kevin Rosenberg <kevin@rosenberg.net>
         * doc/ref-fdml.lisp: Fix variable tag name to varname
