--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cl-sql (3.1.4-1) unstable; urgency=low
+
+  * New upstream
+
+ -- Kevin M. Rosenberg <kmr@debian.org>  Wed, 29 Dec 2004 09:49:11 -0700
+
 cl-sql (3.1.3-1) unstable; urgency=low
 
   * New upstream
