--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cl-sql (3.1.5-1) unstable; urgency=low
+
+  * New upstream
+
+ -- Kevin M. Rosenberg <kmr@debian.org>  Wed,  5 Jan 2005 10:25:40 -0700
+
 cl-sql (3.1.4-1) unstable; urgency=low
 
   * New upstream
