--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+22 Jan 2005 Kevin Rosenberg <kevin@rosenberg.net>
+	* db-sqlite/sqlite-sql.lisp, db-sqlite3/sqlite3-sql.lisp:
+	Better support for 64 bit environments
+
 05 Jan 2005 Kevin Rosenberg <kevin@rosenberg.net>
 	* Version 3.1.5
 	* sql/metaclass.lisp: Make t the default value of :set
