--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+24 Jan 2005 Kevin Rosenberg <kevin@rosenberg.net>
+	* doc/bookinfo.xml, doc/csql.xml, doc/intro.xml: Update links
+	now that LispWorks is an independant company [noted by
+	Martin Thornquist]
+	
 22 Jan 2005 Kevin Rosenberg <kevin@rosenberg.net>
 	* db-sqlite/sqlite-sql.lisp, db-sqlite3/sqlite3-sql.lisp:
 	Better support for 64 bit environments
