--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+25 Jan 2005 Kevin Rosenberg <kevin@rosenberg.net>
+	* tests/*.lisp: Change Vladamir to Vladimir per Cyrus Harmon's
+	suggestion.
+
 24 Jan 2005 Kevin Rosenberg <kevin@rosenberg.net>
 	* doc/bookinfo.xml, doc/csql.xml, doc/intro.xml: Update links
 	now that LispWorks is an independant company [noted by
