--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 25 Jan 2005 Kevin Rosenberg <kevin@rosenberg.net>
 	* tests/*.lisp: Change Vladamir to Vladimir per Cyrus Harmon's
 	suggestion.
+	* sql/utils.lisp: Fix unnecessary consing noted by Fred Gilham.
 
 24 Jan 2005 Kevin Rosenberg <kevin@rosenberg.net>
 	* doc/bookinfo.xml, doc/csql.xml, doc/intro.xml: Update links
