--- a/ChangeLog
+++ b/ChangeLog
@@ -2,7 +2,8 @@
 	* tests/*.lisp: Change Vladamir to Vladimir per Cyrus Harmon's
 	suggestion.
 	* sql/utils.lisp: Fix unnecessary consing noted by Fred Gilham.
-
+	* doc/*.xml: Fix spelling of Vladimir
+	
 24 Jan 2005 Kevin Rosenberg <kevin@rosenberg.net>
 	* doc/bookinfo.xml, doc/csql.xml, doc/intro.xml: Update links
 	now that LispWorks is an independant company [noted by
