--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cl-sql (3.1.6-1) unstable; urgency=low
+
+  * New upstream
+
+ -- Kevin M. Rosenberg <kmr@debian.org>  Fri, 28 Jan 2005 17:43:48 -0700
+
 cl-sql (3.1.5-1) unstable; urgency=low
 
   * New upstream
