--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,8 @@
 	* sql/oodml.lisp: Clear view instance cache when delete-instance-records
 	is invoked [suggested by Alan Shutko].
 	* uffi/clsql-uffi-loader.lisp: Improvements for loading with SBCL X86-64
+	* sql/metaclasses.lisp: Don't change case of a :base-table string supplied
+	to def-view-class [fix suggested by Fred Gilham].
 	
 25 Jan 2005 Kevin Rosenberg <kevin@rosenberg.net>
 	* tests/*.lisp: Change Vladamir to Vladimir per Cyrus Harmon's
