r10331: 17 Feb 2005 Kevin Rosenberg <kevin@rosenberg.net>         * Version 3.1.7         * sql/package.lisp: Export database-reconnect from clsql-sys

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cl-sql (3.1.7-1) unstable; urgency=low
+
+  * New upstream (closes:295769)
+
+ -- Kevin M. Rosenberg <kmr@debian.org>  Thu, 17 Feb 2005 16:46:22 -0700
+
 cl-sql (3.1.6-1) unstable; urgency=low
 
   * New upstream
