--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+17 Feb 2005 Kevin Rosenberg <kevin@rosenberg.net>
+	* Version 3.1.7
+	* sql/package.lisp: Export database-reconnect from clsql-sys
+
 08 Feb 2005 Kevin Rosenberg <kevin@rosenberg.net>
 	* sql/oodml.lisp: Use explicit database in fault-join-target-slot
 	[Patch from Walter Pelissero]
