--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+03 Mar 2005 Kevin Rosenberg <kevin@rosenberg.net>
+	* sql/oodml.lisp: Improve database priority in 
+	update-records-from-instance [Patch from Walter C. Pelissero]
+	
 17 Feb 2005 Kevin Rosenberg <kevin@rosenberg.net>
 	* Version 3.1.7
 	* sql/package.lisp: Export database-reconnect from clsql-sys
