--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+03 Apr 2005 Kevin Rosenberg <kevin@rosenberg.net>
+	* sql/time.lisp: Patch from Keith James for parsing ISO-8601 timestamps
+	
 18 Mar 2005 Kevin Rosenberg <kevin@rosenberg.net>
 	* sql/oodml.lisp: Add missing database argument [Patch from
 	Alan Caulkins]
