--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cl-sql (3.1.9-1) unstable; urgency=low
+
+  * New upstream
+
+ -- Kevin M. Rosenberg <kmr@debian.org>  Wed,  6 Apr 2005 09:30:51 -0600
+
 cl-sql (3.1.8-1) unstable; urgency=low
 
   * New upstream
