--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+12 Apr 2005 Kevin Rosenberg <kevin@rosenberg.net>
+	* Version 3.1.10
+	* db-postgresql-socket/postgresql-socket-api.lisp: Commit patch
+	from Janis Dzerins to support unicode on SBCL
+	* sql/syntax: Commit patch from Alan Shields to improve reporting
+	of invalid syntax statements.
+	
 06 Apr 2005 Kevin Rosenberg <kevin@rosenberg.net>
 	* Version 3.1.9
 	* db-mysql/mysql-sql.lisp: Add port to connection specification
