r10399: 12 Apr 2005 Kevin Rosenberg <kevin@rosenberg.net>         * Version 3.1.10         * db-postgresql-socket/postgresql-socket-api.lisp: Commit patch         from Janis Dzerins to support unicode on SBCL         * sql/syntax: Commit patch from Alan Shields to improve reporting         of invalid syntax statements.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cl-sql (3.1.10-1) unstable; urgency=low
+
+  * New upstream
+
+ -- Kevin M. Rosenberg <kmr@debian.org>  Wed, 13 Apr 2005 13:00:51 -0600
+
 cl-sql (3.1.9-1) unstable; urgency=low
 
   * New upstream
