--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+21 Apr 2005 Kevin Rosenberg <kevin@rosenberg.net>
+	* sql/syntax: Commit patch from Alan Shields to supress reader
+	macros when *read-supress* is T.
+	
 13 Apr 2005 Kevin Rosenberg <kevin@rosenberg.net>
 	* Version 3.1.10
 	* db-postgresql-socket/postgresql-socket-api.lisp: Commit patch
