--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,5 @@
-21 Apr 2005 Kevin Rosenberg <kevin@rosenberg.net>
+24 Apr 2005 Kevin Rosenberg <kevin@rosenberg.net>
+	* Version 3.1.11
 	* sql/syntax: Commit patch from Alan Shields to supress reader
 	macros when *read-supress* is T.
 	
