--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,7 @@
 26 Apr 2005 Kevin Rosenberg <kevin@rosenberg.net>
+	* Version 3.1.12
+	* sql/time.lisp: Commit patch from Daniel Lowe which adds support
+	for fractional seconds which is required by PostgreSQL
 	* db-postgresql/postgresql-loader.lisp: Add library path for Windows
 	
 25 Apr 2005 Kevin Rosenberg <kevin@rosenberg.net>
