--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cl-sql (3.1.12-1) unstable; urgency=low
+
+  * New upstream
+
+ -- Kevin M. Rosenberg <kmr@debian.org>  Wed, 27 Apr 2005 15:47:40 -0600
+
 cl-sql (3.1.11-1) unstable; urgency=low
 
   * New upstream
