--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+27 Apr 2005 Kevin Rosenberg <kevin@rosenberg.net>
+	* db-postgresql-socket/postgresql-api.lisp: Commit patch from Tim Howe
+	to fix read-socket-sequence on non-sb-unicode sbcl.
+	
 26 Apr 2005 Kevin Rosenberg <kevin@rosenberg.net>
 	* Version 3.1.12
 	* sql/time.lisp: Commit patch from Daniel Lowe which adds support
