--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+06 May 2005 Kevin Rosenberg <kevin@rosenberg.net>
+	* sql/oodml.lisp: Change db-writer and db-reader processing to accept
+	a symbol as well as function to serve as a function designator
+	[issue noted by will@cesmail.net]
+
 05 May 2005 Kevin Rosenberg <kevin@rosenberg.net>
 	* Version 3.1.13
 	* sql/time.lisp: Fix error in submitted patch which caused error
