--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+18 May 2005 Kevin Rosenberg <kevin@rosenberg.net>
+	* Version 3.1.15
+	* sql/time.lisp: Fix bug in roll that caused failure in test suite
+
 17 May 2005 Kevin Rosenberg <kevin@rosenberg.net>
 	* Version 3.1.14
 	* sql/oodml.lisp: Properly handle when db-writer is NIL
