--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cl-sql (3.1.15-1) unstable; urgency=low
+
+  * New upstream
+
+ -- Kevin M. Rosenberg <kmr@debian.org>  Wed, 18 May 2005 01:25:33 -0600
+
 cl-sql (3.1.14-1) unstable; urgency=low
 
   * New upstream
